Added Rice - Rice Crop (block) - Rice (ingredient item) - Rice Seed (item)

--- a/src/main/resources/assets/veggieplus/lang/en_us.json
+++ b/src/main/resources/assets/veggieplus/lang/en_us.json
@@ -1,6 +1,9 @@
 {
   "item.veggieplus.tomato": "Tomato",
   "item.veggieplus.tomato_seeds": "Tomato Seeds",
+  "item.veggieplus.rice": "Rice",
+  "item.veggieplus.rice_seeds": "Rice Seeds",
 
-  "block.veggieplus.tomato_crop": "Tomato Crop"
+  "block.veggieplus.tomato_crop": "Tomato Crop",
+  "block.veggieplus.rice_crop": "Rice Crop"
 }
