Added two recipes and foods  - added pasta  - added bowl of rice  - updated readme.md

--- a/src/main/resources/assets/veggieplus/lang/en_us.json
+++ b/src/main/resources/assets/veggieplus/lang/en_us.json
@@ -3,6 +3,8 @@
   "item.veggieplus.tomato_seeds": "Tomato Seeds",
   "item.veggieplus.rice": "Rice",
   "item.veggieplus.rice_seeds": "Rice Seeds",
+  "item.veggieplus.bowl_of_rice": "Bowl of Rice",
+  "item.veggieplus.pasta": "Pasta",
 
   "block.veggieplus.tomato_crop": "Tomato Crop",
   "block.veggieplus.rice_crop": "Rice Crop"
