Added a new food and a recipe  - added Kimbap

--- a/src/main/resources/assets/veggieplus/lang/en_us.json
+++ b/src/main/resources/assets/veggieplus/lang/en_us.json
@@ -5,7 +5,8 @@
   "item.veggieplus.rice_seeds": "Rice Seeds",
   "item.veggieplus.bowl_of_rice": "Bowl of Rice",
   "item.veggieplus.pasta": "Pasta",
-
+  "item.veggieplus.kimbap": "Kimbap",
+  
   "block.veggieplus.tomato_crop": "Tomato Crop",
   "block.veggieplus.rice_crop": "Rice Crop"
 }
